//==========================================================================
//
// History file for EvtGen
//
//===========================================================================

23rd January 2013 John Back
     Added EvtGenExternal/EvtPythiaRandom to allow the use of the EvtGen
     random number engine to also be used for the random engine for Pythia 8.
     Added a boolean (useEvtGenRandom, default = true) within the 
     EvtExternalGenList constructor to use this feature.

18th December 2012 John Back
     Corrected some wrong daughter ordering assignments for decay modes 5 and
     12 in EvtDDalitz. Updated validation/DalitzDecays.xml to also contain
     D decay mode 12, as well as various modes that may use K_S0 and K_L0. 
     Added validation/genDDalitzModes.sh and updated 
     validation/compareDalitz.C to do a complete comparison of the D Dalitz 
     modes with the xml versions.

11th December 2012 Daniel Craik
     Updated the Xml parser to support named model parameters. Updated the 
     generic Dalitz model to use named model parameters as an example.

15th October 2012 John Back
     Make EvtSimpleRandomEngine inherit from EvtRandomEngine to avoid
     crash in EvtGen.cpp when no random engine is defined 
     (from Bjoern Spruck).

R01-01-00-------------------------------------------------------------------
4th October 2012 John Back
     New tag, version "1.1.0", incorporating all changes below.

     Provide proper default constructors for EvtVector4R and 
     EvtPhotonParticle. Modified the validation and test code to also
     compile/link in the case of no external generators being included.

3rd October 2012 John Back
     Corrected the t3 vector form factor values for the Ball-Zwicky '05 
     model (modelId = 6) in EvtbTosllBallFF::getVectorFF(), which
     were set to t3tilde instead.

18th September 2012 John Back
     Moved the external generator engines to a new sub-directory 